--- a/CarReorganised/Debug/makefile
+++ b/CarReorganised/Debug/makefile
@@ -11,10 +11,10 @@ GEN_CMDS__FLAG :=
 
 ORDERED_OBJS += \
 "./DCMotor.obj" \
-"./IndicatorLED.obj" \
 "./Infrared.obj" \
 "./Servo.obj" \
 "./Ultrasonic.obj" \
+"./UserInterface.obj" \
 "./main.obj" \
 "../lnk_msp430g2553.cmd" \
 $(GEN_CMDS__FLAG) \
@@ -146,8 +146,8 @@ CarReorganised.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 # Other Targets
 clean:
 	-$(RM) $(EXE_OUTPUTS__QUOTED)
-	-$(RM) "DCMotor.obj" "IndicatorLED.obj" "Infrared.obj" "Servo.obj" "Ultrasonic.obj" "main.obj" 
-	-$(RM) "DCMotor.d" "IndicatorLED.d" "Infrared.d" "Servo.d" "Ultrasonic.d" "main.d" 
+	-$(RM) "DCMotor.obj" "Infrared.obj" "Servo.obj" "Ultrasonic.obj" "UserInterface.obj" "main.obj" 
+	-$(RM) "DCMotor.d" "Infrared.d" "Servo.d" "Ultrasonic.d" "UserInterface.d" "main.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
