--- a/HardwareTests/HardwareTests/Debug/makefile
+++ b/HardwareTests/HardwareTests/Debug/makefile
@@ -14,6 +14,7 @@ ORDERED_OBJS += \
 "./Common.obj" \
 "./DCMotor.obj" \
 "./IndicatorLED.obj" \
+"./Servo.obj" \
 "./main.obj" \
 "../lnk_msp430g2553.cmd" \
 $(GEN_CMDS__FLAG) \
@@ -145,8 +146,8 @@ HardwareTests.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 # Other Targets
 clean:
 	-$(RM) $(EXE_OUTPUTS__QUOTED)
-	-$(RM) "Button.obj" "Common.obj" "DCMotor.obj" "IndicatorLED.obj" "main.obj" 
-	-$(RM) "Button.d" "Common.d" "DCMotor.d" "IndicatorLED.d" "main.d" 
+	-$(RM) "Button.obj" "Common.obj" "DCMotor.obj" "IndicatorLED.obj" "Servo.obj" "main.obj" 
+	-$(RM) "Button.d" "Common.d" "DCMotor.d" "IndicatorLED.d" "Servo.d" "main.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
